MDEV-5991: crash in Item_field::used_tables

Units of subqueroes from excluded expressions should be excluded from select_lex/select_unit tree.